# DataClaw

./: .env.example  .gitignore  README.md  README_en.md  README_zh.md
.trae/specs/create-data-analysis-platform/: checklist.md  spec.md  tasks.md
backend/: .gitignore  README.md  dataclaw.db  hatch_build.py  main.py  pyproject.toml
backend/app/: cli.py  context.py  database.py
backend/app/agent/: chart.py  nl2sql.py
backend/app/api/: a2a.py  datasources.py  embedding_models.py  knowledge.py  llm.py  mcp.py  projects.py  semantic.py  skills.py  subagents.py  upload.py  users.py  web_search.py
backend/app/connectors/: clickhouse.py  csv.py  factory.py  minio.py  parquet.py  postgres.py
backend/app/core/: artifacts.py  data_root.py  email.py  files.py  llm_provider.py  nanobot.py  patched_openai_compat_provider.py  security.py  session_alias_store.py  streaming_provider.py
backend/app/models/: a2a.py  datasource.py  project.py  subagent.py  user.py
backend/app/schemas/: a2a.py  chart.py  datasource.py  embedding_model.py  knowledge.py  mcp.py  mdl.py  project.py  subagent.py  user.py
backend/app/services/: a2a_service.py  embedding_model_store.py  knowledge_base_store.py  knowledge_global_config_store.py  knowledge_index.py  llm_cache.py  mdl.py  openai_compat.py  web_search_config_store.py
backend/app/skills_builtin/nl2sql/: SKILL.md
backend/app/skills_builtin/visualization/: SKILL.md
backend/app/tools/: get_schema.py  knowledge_base.py  nl2sql.py  subagent.py  visualization.py
backend/app/trace/: __init__.py  attributes.py  service.py
backend/data/: llm_config.json
backend/data/workspace/sessions/: api_default.jsonl
backend/tests/: test_a2a_backend.py  test_artifact_endpoints.py  test_artifacts.py  test_chat_project_id.py  test_data_root.py  test_dataclaw_cli.py  test_knowledge_base_backend.py  test_nanobot_project_resolution.py  test_nl2sql.py  test_patched_openai_compat_provider.py  test_subagent_detail_route.py  test_subagent_tools_e2e_regression.py  test_trace_integration.py  test_webui_static_hosting.py
docs/: some.md
examples/: file_example_XLS_1000.xls
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: a2a.ts  subagents.ts
frontend/src/components/: ArtifactPanel.tsx  ChatInterface.tsx  DataSourceForm.tsx  ErrorBoundary.tsx  InlineVisualizationCard.tsx  KnowledgeBaseForm.tsx  ProjectSwitcher.tsx  Sidebar.tsx  SlashCommandMenu.tsx  ThemeToggle.tsx  VegaChart.tsx  VisualizationPanel.tsx
frontend/src/components/modeling/: TableNode.tsx
frontend/src/i18n/: config.ts
frontend/src/i18n/locales/: en.json  zh.json
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  DataSources.tsx  EmbeddingModels.tsx  KnowledgeBases.tsx  Login.tsx  ModelConfigs.tsx  Modeling.tsx  Projects.tsx  Settings.tsx  Skills.tsx  Subagents.tsx  Users.tsx  VerifyEmail.tsx  WebSearchConfig.tsx
frontend/src/store/: authStore.ts  dashboardStore.ts  mcpHealthStore.ts  projectStore.ts  themeStore.ts  visualizationStore.ts
nanobot/nanobot/providers/: base.py  litellm_provider.py  registry.py
whisper/: .gitignore  README.md  main.py
