[project]
name = "dataclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0,<1.0.0",
    "bcrypt>=5.0.0",
    "chardet>=3.0.2,<6.0.0",
    "clickhouse-driver>=0.2.10",
    "croniter>=6.0.0,<7.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "duckdb>=1.5.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.0,<1.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "langfuse>=3.7.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "llama-index-core>=0.14.0",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-embeddings-openai-like>=0.3.1",
    "loguru>=0.7.3,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "openai>=2.8.0",
    "openpyxl>=3.1.5",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "pandas>=3.0.1",
    "passlib>=1.7.4",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "python-pptx>=1.0.2",
    "python-socketio>=5.16.0,<6.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "pyyaml>=6.0.3",
    "qq-botpy>=1.2.0,<2.0.0",
    "questionary>=2.0.0,<3.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "socksio>=1.0.0,<2.0.0",
    "sqlalchemy>=2.0.48",
    "tiktoken>=0.12.0,<1.0.0",
    "typer>=0.20.0,<1.0.0",
    "uvicorn>=0.41.0",
    "websocket-client>=1.9.0,<2.0.0",
    "websockets>=16.0,<17.0",
]

[project.scripts]
dataclaw = "app.cli:app"
nanobot = "nanobot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.sources]
"app" = "app"

[tool.hatch.build.targets.wheel.force-include]
"../frontend/dist" = "app/webui"
"../nanobot/nanobot" = "nanobot"
"main.py" = "main.py"

[tool.hatch.build.targets.sdist.force-include]
"../frontend/dist" = "frontend/dist"
"../nanobot/nanobot" = "nanobot"
"main.py" = "main.py"
